--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,6 @@
 .active {
     @apply font-medium tracking-wide text-blue-700 transition-colors duration-200 hover:text-blue-400
 }
-.detault {
+.default {
     @apply font-medium tracking-wide text-gray-700 transition-colors duration-200 hover:text-blue-400
 }
